[package]
name = "membership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
futures = "0.3.28"
rand = "0.8.5"
socket2 = "0.5.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tracing = "0.1.37"

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"
